@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../popt/lib/libpopt.lib ../../glib/lib/glib-2.0.lib ../../glib/lib/gobject-2.0.lib ../../gtk+/lib/gdk-win32-2.0.lib ../../gtk+/lib/gtk-win32-2.0.lib ../../pango/lib/pango-1.0.lib &quot;../gpsim/Debug GUI/gpsim.lib&quot; ../../pthreads/lib/pthreadVC.lib"
+				AdditionalDependencies="../../popt/lib/libpopt.lib ../../glib/lib/glib-2.0.lib ../../glib/lib/gobject-2.0.lib ../../gtk+/lib/gdk-win32-2.0.lib ../../gtk+/lib/gtk-win32-2.0.lib ../../pango/lib/pango-1.0.lib &quot;../gpsim/Debug GUI/gpsim.lib&quot; ../../pthreads/lib/pthreadVC1.lib"
 				OutputFile="$(OutDir)/modules.dll"
 				LinkIncremental="2"
 				ModuleDefinitionFile="../plat/win32/modules.def"
